--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,9 @@ html {
 }
 body {
   font-family: 'Courier New', monospace;
-  background-color: rgb(200, 200, 200);
-  margin: 0px 0px 0px 0px;
+  background-color: rgb(25, 25, 25);
+  color: white;
+  margin: 0;
 }
 
 
@@ -59,7 +60,33 @@ body {
 .navButt:hover{
   border: 3px solid white
 }
+.darkmodeCont{
+  margin-right: 25px;
+  height: 100%;
+  width: 40px;
+  float: right;
 
+  display: grid;
+  place-items: center;
+}
+.DkMdImg {
+  height: 20px;
+  width: 20px;
+}
+.darkmodeBttn {
+  height: 40px;
+  width: 100%;
+  background: none;
+  border: 2px solid rgb(100, 250, 250);
+
+  color: white;
+  font-size: 10px;
+  text-transform: uppercase;
+  border-radius: 5px;
+}
+.darkmodeBttn:hover {
+  cursor: pointer;
+}
 
 
 .coverContainer{
@@ -69,10 +96,18 @@ body {
   width: 100%;
   box-sizing: border-box;
 }
+.hexSeparator {
+  position: relative;
+  overflow: hidden;
+  height: 100px;
+  width: fit-content;
+  margin: 0 auto;
+  box-sizing: border-box;
+  display: grid;
+  place-items: center;
+}
 .row{
   display: inline-flex;
-  margin-left: -51px;
-  margin-top: -30px;
   overflow: hidden;
 }
 .row:nth-child(even){
@@ -85,24 +120,16 @@ body {
   background: rgb(10, 50, 150);
   margin: 3px;
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  animation: animate 10s linear infinite alternate;
+  animation: animate 5s linear infinite alternate;
 }
-@keyframes animate{
-  0%{
-    filter: hue-rotate(0deg);
-  }
-  100%{
-    filter: hue-rotate(-62deg);
-  }
-}
+
 .coverText {
-  position: relative;
-  top: -650px;
+  margin: 150px auto;
   display: grid;
   place-items: center;
 }
 .coverTextContainer {
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgb(25, 25, 25);
   width: 50%;
   text-align: center;
   font-family: "Source Sans Pro", sans-serif;
@@ -110,7 +137,16 @@ body {
   color: white;
   height: auto;
   border-radius: 75px;
-  box-shadow:  5px 5px 15px rgb(10, 50, 150), -5px -5px 15px rgb(10, 50, 150);
+  box-shadow:  0 0 20px 10px rgb(10, 50, 150);
+  animation: animate 5s linear infinite alternate;
+}
+@keyframes animate{
+  0%{
+    filter: hue-rotate(0deg);
+  }
+  100%{
+    filter: hue-rotate(-50deg);
+  }
 }
 .coverTitle {
   font-size: 75;
@@ -174,6 +210,9 @@ body {
 
 .aboutMe {
   height: 600px;
+  min-width: 300px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 .aboutMeMenu {
   margin: 0 0 25px 25px;
@@ -197,8 +236,8 @@ body {
 }
 .aboutMeContainer {
   display: grid;
-  grid-template-columns: repeat(2, 48% 35%);
-  gap: 5px;
+  grid-template-columns: minmax(300px, 700px) 250px;
+  margin-right: 125px;
 }
 .aboutMeText {
   position: relative;
@@ -207,7 +246,6 @@ body {
   margin-left: 25px;
   /* Text */
   font-size: 16px;
-  color: black;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -217,6 +255,7 @@ body {
 .aboutMeImgContainer {
   font-size: 10px;
   text-align: center;
+  margin: 0;
 }
 .aboutMeImg {
   width: 250px;
@@ -225,56 +264,85 @@ body {
   box-shadow: 15px 15px 40px #393d42;
   margin-bottom: 25px;
 }
-.abtImgFooter {
-  color: black;
-  font-size: 12px;
+.abtImgFooter>a {
+  color: rgb(175, 175, 250);
 }
 
 
 
-.SP {
-  float: right;
-}
-.SPButton {
-  background-color: transparent;
-  border: none;
-  color: rgb(0, 0, 0, 0);
-  font-size: 20px;
-}
-.SP Button:hover {
-  color: rgb(100, 25, 25);
-  cursor: pointer;
-  border: 2px dotted rgb(100, 25, 25);
-}
+
 .projects {
   padding-top: 10px;
   height: 750px;
-  background-color: white;
 }
 .projectsBox {
-  margin: 50px 150px 0 0;
+  margin: 50px 150px;
   height: 500px;
-}
-.projectsColumn {
-  float: left;
-  height: 100%;
-  /*Text*/
   color: white;
+  display: grid;
+  grid-template-columns: 220px minmax(450px, 750px);
+  grid-template-rows: 500px;
 }
 .leftColumn {
-  width: 20%;
+  height: 100%;
+  width: 100%;
   box-sizing: border-box;
   background-color: black;
-  display: table;
-  margin-left: 9.75%;
+  
   box-shadow: 20px 20px 50px #393d42;
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
   border-right: 0.5px solid rgb(200, 250, 250, .5);
+
+  display: grid;
+  grid-template-rows: repeat(8, 50px);
+  padding: 25px 10px;
+  gap: 5px;
 }
-.rightColumn {
-  width: 70%;
+.projectsListB {
+  display: grid;
+  grid-template-columns: 50px auto;
+  gap: 15px;
+}
+.projectsLogos {
+  border: 5px solid black;
+  height: 50px;
+  width: 50px;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+.projectsLogos:hover {
+  border: 2px solid white;
+  cursor: pointer;
+  border-radius: 15%;
+}
+.projectsTitle {
+  width: 100%;
   height: 100%;
+
+  display: grid;
+  place-items: center start;
+  font-size: 15px;
+}
+.SPcont {
+  grid-row: 9;
+  display: grid;
+  place-content: center;
+}
+.SPButton {
+  color: white;
+  background: none;
+  border: 2px solid rgb(0, 250, 250);
+  font-size: 15px;
+}
+.SPButton:hover {
+  cursor: pointer;
+  border: 3px solid rgb(0, 250, 250);
+}
+/* RIGHT COLUMN */
+.rightColumn {
+  height: 100%;
+  width: 100%;
   box-sizing: border-box;
   background-color: rgb(50, 50, 50);
 
@@ -283,40 +351,7 @@ body {
   border-bottom-right-radius: 25px;
   border-left: 0.5px solid rgb(200, 250, 250, .5);
 }
-.projectsList {
-  list-style: none;
-  display: table-cell;
-  vertical-align: middle;
-  box-sizing: border-box;
-  padding-inline-start: 10px;
-}
-.projectsList img {
-  border: 1px solid black;
-}
-.projectsList img:hover {
-  border: 2px solid white;
-  cursor: pointer;
-  border-radius: 15%;
-}
-.projectsListB {
-  display: grid;
-  grid-template-columns: 40% 60%;
-}
-.projectsLogos {
-  height: 75px;
-  width: 75px;
-  vertical-align: middle;
-  box-sizing: border-box;
-}
-.projectsTitle {
-  width: 100%;
-  height: 75px;
-  float: right;
 
-  display: grid;
-  place-items: center start;
-  font-size: 14px;
-}
 .projectsImgContainer {
   display: grid;
   place-items: center;
@@ -370,13 +405,6 @@ body {
   float: right;
   bottom: 150px;
 }
-
-
-
-/* Background 2, for night mode.
-background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b_o.png);
-*/
-
 
 
 .background {
@@ -497,7 +525,6 @@ background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b
   height: 175px;
 
   border-top: 5px solid black;
-  background-color: white;
   text-align: center;
 }
 .footerLogosContainer {
@@ -510,9 +537,13 @@ background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b
   float: left;
   position: relative;
   left: 25px;
+  width: 50px;
 }
 .logoFooter:hover{
   cursor: pointer;
+}
+#LogoFooter {
+  float: left;
 }
 .footerSocials  {
   float: right;
@@ -533,17 +564,35 @@ background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b
   width: 200px;
   margin-left: 25px;
 }
+.FaviconLogos>a {
+  color: rgb(175, 175, 250);
+}
 
 
 
 /* MEDIAS MEDIAS MEDIAS */
+
+@media (min-width: 1250px) {
+  .aboutMeContainer {
+    margin-right: 0;
+  }
+  .projects {
+    display: grid;
+  }
+  .projectsBox {
+    place-self: center;
+  }
+}
 /* up to 980px */
 @media (max-width:980px) {
   .latMenu{
     display: none;
   }
+  .aboutMeContainer {
+    margin-right: 0;
+  }
   .projectsBox {
-    margin-right: 50px;
+    margin: 50px;
   }
   .projectsListB {
     grid-template-columns: 50% 50%;
@@ -606,14 +655,17 @@ background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b
 /* MOBILE - 614px */
 @media (max-width: 614px) {
   .nav {
-    background-color: white;
+    background-color: rgb(10, 50, 150);
     border: none;
     display: grid;
     place-items: center;
-    border-bottom: 5px solid rgb(100, 250, 250);
+    border-bottom: 5px solid black;
   }
   .coverContainer {
-    height: 250px;
+    height: 500px;
+  }
+  .coverText {
+    margin: 100px auto;
   }
   .coverTextContainer {
     width: 90%;
@@ -624,11 +676,16 @@ background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b
   .coverSubtitle {
     font-size: 18px;
   }
-  .navButt {
-    position: fixed;
-    visibility: hidden;
+  .darkmodeCont {
+    display: none;
   }
   .navText {
+    display: none;
+  }
+  .navContactContainter {
+    display: none;
+  }
+  .hexSeparator {
     display: none;
   }
   .aboutMeMenu {
@@ -661,7 +718,7 @@ background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b
     margin-bottom: 15px;
   }
   .webMobileLogo {
-    height: 100%;
+    height: 50%;
     object-fit:none;
   }
   .footer {
@@ -704,7 +761,6 @@ background-image: url(https://live.staticflickr.com/65535/52352734426_cc4f80944b
 .thxBttn a {
   padding: 10px;
   border: 2px solid black;
-
 }
 .thxBttn a:hover {
   cursor: pointer;
